Revert "increase package version on build script"
This reverts commit 246c5fb931758c205814574aa6f3429dc2daa891.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm version patch && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "deploy": "gh-pages -d build -b master --remote gh-pages"
   },
